# buckets

./: .gitignore  68b55b40-4185-4632-a347-96bd3b977b96  ARCHITECTURE.md  CLAUDE.md  COPYRIGHT  Cargo.toml  README.md  compressed.zst  source.txt  test_database_choice  test_database_choice.rs
.cursor/: argv.json
.github/workflows/: ci.yml
docs/: database_layout.md  manual_testing.md  object_storage_and_hashing.md  repository_configuration.md  repository_directory_layout.md
docs/commands/: commit.mmd  create.mmd  init.mmd  revert.md  rollback.md  status.md
docs/commands/flowcharts/: commit.mmd  create.mmd  history.mmd  init.mmd  rollback.mmd  status.mmd
firedbg/: target.json
my-repo/.buckets/: config
src/: args.rs  config.rs  database.rs  errors.rs  main.rs  world.rs
src/commands/: check.rs  commit.rs  create.rs  expect.rs  finalize.rs  history.rs  init.rs  link.rs  list.rs  mod.rs  restore.rs  revert.rs  rollback.rs  schema.rs  stash.rs  stats.rs  status.rs
src/data/: bucket.rs  commit.rs  mod.rs
src/sql/: schema.sql
src/utils/: checks.rs  compression.rs  config.rs  mod.rs  security.rs  utils.rs
style/: markdown_preview.css
tests/: common.rs  test_cli_check.rs  test_cli_commit.rs  test_cli_create.rs  test_cli_expect.rs  test_cli_finalize.rs  test_cli_history.rs  test_cli_init.rs  test_cli_link.rs  test_cli_list.rs  test_cli_revert.rs  test_cli_rollback.rs  test_cli_schema.rs  test_cli_stash.rs  test_cli_stats.rs  test_cli_status.rs  tests.rs
