[package]
name = "buckets"
version = "0.1.2"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
once_cell = "1.20.3"
log = "0.4.26"
duckdb = { version = "1.1.1", features = ["bundled"] }
tempfile = "3.17.1"
assert_cmd = "2.0.16"
toml = "0.8.20"
serde = { version = "1.0.218", features = ["derive"] }
uuid = { version = "1.15.1", features = ["v4", "serde"] }
serde_derive = "1.0.218"
blake3 = "1.6.1"
walkdir = "2.5.0"
predicates = "3.1.3"
zstd = "0.13.3"
thiserror = "2.0.11"
chrono = "0.4.38"
arrow = "53.2.0"

[lints.clippy]
unwrap_used = "deny"
