[package]
name = "buckets"
version = "0.1.3"
edition = "2021"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
once_cell = "1.21.3"
log = "0.4.27"
duckdb = { version = "1.2.2", features = ["bundled"] }
tempfile = "3.20.0"
assert_cmd = "2.0.17"
toml = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
serde_derive = "1.0.219"
blake3 = "1.8.2"
walkdir = "2.5.0"
predicates = "3.1.3"
zstd = "0.13.3"
thiserror = "2.0.11"
chrono = "0.4.41"
arrow = "55.1.0"

[lints.clippy]
unwrap_used = "deny"
