[package]
name = "buckets"
version = "0.1.4"
edition = "2021"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
once_cell = "1.21.3"
log = "0.4.27"
env_logger = "0.11.8"
duckdb = { version = "1.3.0", features = ["bundled"] }
postgresql_embedded = { version = "0.18.0", optional = true }
postgres = { version = "0.19.9", optional = true }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"], optional = true }
tempfile = "3.20.0"
assert_cmd = "2.0.17"
toml = "0.8.23"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
serde_derive = "1.0.219"
blake3 = "1.8.2"
walkdir = "2.5.0"
predicates = "3.1.3"
zstd = "0.13.2"
thiserror = "2.0.12"
chrono = "0.4.41"
arrow = "55.1.0"

[dev-dependencies]
serial_test = "3.2"

[features]
default = []
postgres = ["dep:postgresql_embedded", "dep:postgres", "dep:tokio"]

[lints.clippy]
unwrap_used = "deny"
